# openedx-plugin-example

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __about__.py  pyproject.toml  setup.py
doc/masterclass/: CONTRIBUTORS.md  README.md
openedx_plugin/: README.md  __about__.py  __init__.py  admin.py  apps.py  middleware.py  models.py  receivers.py  signals.py  urls.py  utils.py  version.py  waffle.py  wordpress_oauth2_backend.py
openedx_plugin/api/: README.md  serializers.py  urls.py  views.py
openedx_plugin/dashboard/: utils.py  views.py
openedx_plugin/locale/: README.md  utils.py  views.py
openedx_plugin/management/commands/: openedx_plugin_init.py
openedx_plugin/migrations/: 0001_initial.py  0002_alter_marketingsites_language.py  0003_auto_20230615_1732.py
openedx_plugin/scripts/: init-db.sql
openedx_plugin/settings/: common.py  production.py
openedx_plugin/student/: registration.py  session.py
openedx_plugin_api/: README.md  __about__.py  __init__.py  admin.py  api.py  apps.py  context_api.py  custom_oauth2_backend.py  middleware.py  models.py  receivers.py  signals.py  urls.py  utils.py  version.py  views.py  waffle.py
openedx_plugin_api/management/commands/: create_oauth_application_client_config.py  initialize.py  openedx_plugin_api_init.py
openedx_plugin_api/migrations/: 0001_initial.py
openedx_plugin_api/settings/: common.py  production.py
openedx_plugin_api/tests/: test_edxapi_endpoints.py
openedx_plugin_cms/: README.md  __about__.py  __init__.py  admin.py  apps.py  auditor.py  models.py  signals.py  urls.py  utils.py  version.py  waffle.py
openedx_plugin_cms/data/: README.md  course.json  course_audit.py  demo_course.txt  demo_course_xml_data.txt  problem.json  section.json  vertical.json  xblock-problem.json  xblock_info.json  xblock_info_w_data.json
openedx_plugin_cms/management/commands/: course_audit.py  eval_course.py  openedx_plugin_cms_init.py
openedx_plugin_cms/migrations/: 0001_initial.py  0002_courseaudit.py  0003_auto_20211215_0428.py  0004_auto_20211215_1645.py  __init__.py
openedx_plugin_cms/settings/: common.py  production.py
openedx_plugin_cms/templates/: course_audit.html  course_audit_html.html  course_change_log.html
openedx_plugin_cms/views/: __init__.py  change_log.py  course_audit.py  course_audit_html.py
openedx_plugin_mobile_api/: README.rst  __about__.py  __init__.py  apps.py  const.py  decorators.py  middleware.py  urls.py  version.py  waffle.py
openedx_plugin_mobile_api/settings/: common.py
openedx_plugin_mobile_api/tests/: command_line.sh
openedx_plugin_mobile_api/users/: serializers.py  urls.py  views.py
requirements/: common.in  common.txt  common_constraints.txt  constraints.txt  local.in  local.txt
