[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

#------------------------------------------------------------------------------
# PyPi meta data
#------------------------------------------------------------------------------
[project]
name = "openedx-plugin-example"
version = "0.2.1"
license = {file = "LICENSE.txt"}
authors = [
  { name="Lawrence McDaniel", email="lpm0073@gmail.com" }
]
description = "A Django plugin to modify and enhance the feature set of the Open edX learning management system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
]
dependencies = [
  "Django>=3.2,<=3.3",
  "validators",
  "django-environ"
]

keywords = ["Python", "Django", "Open edX", "Plugin", "REST API"]

[project.urls]
Homepage = "https://github.com/cookiecutter-openedx/openedx-plugin-example"
Documentation = "https://github.com/cookiecutter-openedx/openedx-plugin-example"
Repository = "https://github.com/cookiecutter-openedx/openedx-plugin-example"
Changelog = "https://github.com/cookiecutter-openedx/openedx-plugin-example/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/cookiecutter-openedx/openedx-plugin-example/issues"

#------------------------------------------------------------------------------
# see: https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
#------------------------------------------------------------------------------
[project.optional-dependencies]
local = [
    "pre-commit",
    "black",
    "flake8",
    "ipython"
]

#------------------------------------------------------------------------------
# see: https://setuptools.pypa.io/en/latest/userguide/entry_point.html
#------------------------------------------------------------------------------
[project.entry-points."lms.djangoapp"]
openedx_plugin = "openedx_plugin.apps:CustomPluginConfig"
openedx_plugin_api = "openedx_plugin_api.apps:CustomPluginAPIConfig"
openedx_plugin_mobile_api = "openedx_plugin_mobile_api.apps:MobileApiConfig"

[project.entry-points."cms.djangoapp"]
openedx_plugin_cms = "openedx_plugin_cms.apps:CustomPluginCMSConfig"
